SwingMark SubMenus 9% regression in 12-b19 on Linux client

XMLWordPrintable

    • b19
    • 12
    • b25
    • linux

        In "8212605: Pure-Java implementation of AccessController.doPrivileged", the stackwalk in JVM_GetStackAccessControlContext was changed from using a vframeStream to using a javaVFrame, so that it could access locals. However this caused a regression because javaVFrame has more overhead. JDK-8215205 fixes the problem by allowing the use of javaVFrame only when needed.

        This change reverts JVM_GetStackAccessControlContext back to using vframeStream, and uses the new API in JDK-8215205 to get a javaVFrame lazily. It also removes two unnecessary calls to java_sender().

              Assignee:
              Dean Long
              Reporter:
              Eric Caspole
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: