8214329: SwingMark SubMenus 9% regression in 12-b19 on Linux client

Reviewed-by: thartmann, mullan